syntax = "proto3";
package monitor.proto;

message NetInfo {
    string name = 1;                // 网络接口名称（如"eth0", "wlan0"）
    float send_rate = 2;            // 发送速率（KB/s）
    float rcv_rate = 3;             // 接收速率（KB/s）
    float send_packets_rate = 4;    // 发送数据包速率（包/秒）
    float rcv_packets_rate = 5;     // 接收数据包速率（包/秒）
}